# Soteria

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  Script1-Setup.ps1  Script2-Install.ps1  Script2-Menu.ps1  Script3-Test.ps1  Start-AppTestSandbox.ps1
.github/workflows/: release.yml
Personalisation/: readme.txt
docs/: TESTING.md
sandbox-agent/: Cargo.toml
sandbox-agent/src/: main.rs
scripts/: enable-windows-sandbox.ps1  import-summary.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: schema.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: analysis.rs  database.rs  hash.rs  mod.rs  sandbox.rs  settings.rs  virustotal.rs
ui/: index.html  package.json
ui/src/: main.tsx  styles.css
ui/src/components/: MetricCard.tsx
ui/src/pages/: Analyze.tsx
